tests/ui/attributes/issue-105594-invalid-attr-validation.stderr
error: the `track_caller` attribute cannot be used on statics
  --> $DIR/issue-105594-invalid-attr-validation.rs:6:3
   |
LL | #[track_caller]
   |   ^^^^^^^^^^^^
   |
   = help: the `track_caller` attribute can only be applied to functions

error: aborting due to 1 previous error

